[gd_scene load_steps=4 format=2]

[ext_resource path="res://menu/hud/abilities/ability_upgrade.png" type="Texture" id=1]
[ext_resource path="res://menu/maintheme.tres" type="Theme" id=2]
[ext_resource path="res://menu/hud/abilities/abilityupgrades.gd" type="Script" id=3]

[node name="AbilityUpgrades" type="Control"]
margin_right = 384.0
margin_bottom = 88.0
rect_clip_content = true
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 384.0
margin_bottom = 88.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ability1" type="Button" parent="Panel"]
anchor_bottom = 1.0
margin_left = 23.0
margin_right = 99.0
rect_min_size = Vector2( 64, 64 )
icon = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ability2" type="Button" parent="Panel"]
anchor_bottom = 1.0
margin_left = 154.0
margin_top = 0.0250015
margin_right = 230.0
rect_min_size = Vector2( 64, 64 )
icon = ExtResource( 1 )
flat = true

[node name="ability3" type="Button" parent="Panel"]
anchor_bottom = 1.0
margin_left = 285.0
margin_top = 0.0250015
margin_right = 361.0
rect_min_size = Vector2( 64, 64 )
icon = ExtResource( 1 )
flat = true

[node name="Tween" type="Tween" parent="."]
